fix: HOMEのメンバー数とアイコン表示を修正
